# agent-chime-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  design.md  requirements.md
examples/: voicepack_gen.rs
src/: cli.rs  config.rs  events.rs  lib.rs  main.rs  voicepack.rs
src/adapters/: claude.rs  codex.rs  mod.rs  opencode.rs
src/audio/: cache.rs  earcon.rs  mod.rs  renderer.rs
src/system/: mod.rs
src/tts/: broker.rs  mod.rs  pocket.rs  provider.rs  qwen3.rs
tests/: adapters_test.rs
voicepack/: manifest.json
